@@ -35,3 +35,7 @@ webmail package.<br><br>
  admin work, as well as e-mail and phone support is available.  He
  accepts purchase orders.</li>
 <br><br>
+
+<li>The TMDA mailing lists are available as newsgroups courtesy of
+the <a href="http://gmane.org/" TARGET="Resource Window">Gmane</a>
+mail <--> news gateway.<br><br>
