@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Apr  3 15:16:52 2002 -->
+<!-- Fri Apr  5 13:29:58 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -166,6 +166,10 @@ webmail package.<br><br>
  admin work, as well as e-mail and phone support is available.  He
  accepts purchase orders.</li>
 <br><br>
+
+<li>The TMDA mailing lists are available as newsgroups courtesy of
+the <a href="http://gmane.org/" TARGET="Resource Window">Gmane</a>
+mail <--> news gateway.<br><br>
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
