@@ -1,3 +1,7 @@
+2002-04-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* resources.ht (TARGET): Link to Gmane.
+
 2002-04-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* resources.ht (TARGET): Add commercial support link for Mike
